amazon-s3/5.7/modules/ROOT/pages/index.adoc
= Amazon S3 Connector 5.7 



Anypoint Connector for Amazon S3 (Amazon S3 Connector) provides connectivity to the Amazon S3 API, enabling you to interface with Amazon S3 to store objects, download and use data with other AWS services, and build applications that require internet storage.

Instant access to the Amazon S3 API enables seamless integrations between Amazon S3 and other databases, CMS applications such as Drupal, and CRM applications such as Salesforce. Use Amazon S3 to store and retrieve any amount of data at any time, from anywhere on the web. You can accomplish these tasks by using the simple and intuitive web interface of the AWS Management Console.

AWS SDK for Java provides a Java API for AWS infrastructure services.
The Amazon S3 connector is built using the SDK for Java.

For compatibility information and fixed issues, see the xref:release-notes::connector/amazon-s3-connector-release-notes-mule-4.adoc[Amazon S3 Connector Release Notes].

For a major release, see xref:amazon-s3-connector-upgrade-migrate.adoc[Upgrading and Migrating].

== About Connectors

Anypoint connectors are Mule runtime engine extensions that enable you to connect to APIs and resources on external systems, such as Salesforce, Amazon S3, ServiceNow, and Twitter.

== Before You Begin

To use this connector, you must be familiar with:

* The Amazon S3 API
* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* Creating a Mule app using Anypoint Studio or Anypoint Code Builder

Before creating an app, you must have:

* Credentials to access the Amazon S3 target resource
* Anypoint Platform
* Anypoint Studio or Anypoint Code Builder
* Amazon Web Services
* AWS Identity and Access Management (IAM) credentials

[NOTE]
For the Amazon S3 operations to work, you need to enable or update the subset of the overall list of actions in the Amazon S3 bucket to specify that the AWS account has access these actions.

== Common Use Cases for the Connector

The following are common use cases for the Amazon S3 connector:

* Store an image from a URL on Amazon S3, and then retrieve and display the image.
* Create an image link in Amazon S3 and update the status in Twitter along with the image link.

For examples, see xref:amazon-s3-connector-examples.adoc[Examples].

== Authentication Types

Amazon S3 connections use the following authentication types:

* Basic
+
Uses a session token provided by Amazon STS to connect to Amazon S3
+
* Role
+
Uses the Amazon role ARN that uniquely identifies the role to allow cross-account access
+
NOTE: The Role connection type is supported only for standalone or Runtime Fabric deployments. The Role connection type is not supported for CloudHub deployments.


For information about configuring these authentication types, see xref:amazon-s3-connector-studio.adoc[Using Anypoint Studio to Configure Amazon S3].

== Next Step

After you complete the prerequisites, you are ready to create your own app and configure the connector using xref:amazon-s3-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* https://help.mulesoft.com[MuleSoft Help Center]
